--- a/NPO_Lab8/AirCompanyNet/Aircompany/Aircompany.csproj
+++ b/NPO_Lab8/AirCompanyNet/Aircompany/Aircompany.csproj
@@ -90,11 +90,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="JSON\militaryPlanes.json" />
+    <None Include="JSON\passengerPlanes.json" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="JSON\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
